# abductio-core

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  architecture.md  behave.ini  pyproject.toml  pytest.ini  scalar_docs_integration.md
application/: __init__.py  canonical.py  dto.py  ports.py
case_studies/: README.md  abductio_v2_validation_framework.md  boeing_canonical_constrained_pass_2026-02-12.md  boeing_inference_v1.policy.json  boeing_validation_methodology_retrospective_2026-02-12.md  case_study_methodology.org  post_mortem_gk.md  post_mortem_gm.md  post_mortem_gt.md  reviewer_guide.md  reviewer_packet_9H-QAA.txt  safe_baseline.md  safe_baseline_v1.policy.json  safe_baseline_v2.policy.json  unified_empirical_strategy.md  validation_overview.md
docs/: model_card.md  white_paper.html  white_paper.org  white_paper.org~  white_paper.tex  white_paper_pandoc.tex  whitepaper_improved.org  whitepaper_recursive_mece.org  whitepaper_v_2.org  whitepaper_v_2.tex  yellow_paper.org
domain/: model.py
features/: 01_session_bootstrap.feature  02_obligation_template.feature  03_cost_model_and_ops.feature  04_no_free_probability.feature  05_ledger_update_and_other_absorber.feature  06_deterministic_scheduling_and_frontier.feature  07_permutation_invariance_end_to_end.feature  08_soft_and_coupling.feature  09_confidence_k_rubric.feature  10_evaluator_contract_conservative_updates.feature  11_auditability_and_replay.feature  12_adapters_cli_api_smoke.feature
scripts/: coverage.sh  release.sh
tests/: test_deterministic_schedule_strict.py  (+6 more)
(+1977 files in other folders)
